--- a/Fine-tuning.ipynb
+++ b/Fine-tuning.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path='/axp/rim/bdlml/dev/ywu39/projects/NLIinference/'\n",
+    "base_path='***'\n",
     "m='deberta'\n",
     "merged_dffac = pd.read_csv(f'{base_path}nli_inference_{m}_fac.csv')\n",
     "merged_dfcau = pd.read_csv(f'{base_path}nli_inference_{m}_cau.csv')\n",
