--- a/Self-evaluation bias.ipynb
+++ b/Self-evaluation bias.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path='/axp/rim/bdlml/dev/ywu39/projects/NLIinference/'\n",
+    "base_path='***'\n",
     "m='gemma_2_2b'\n",
     "df1fac = pd.read_csv(f'{base_path}{m}_fac_part1.csv')\n",
     "df2fac = pd.read_csv(f'{base_path}{m}_fac_part2.csv')\n",
